# AtomJAX

./: .gitignore  README.md  pyproject.toml  setup.py
atomjax/: __init__.py  constants.py  hamiltonian.py  integration.py  observables.py  solvers.py
examples/: hydrogen_batch.py  plot_wavefunction.py
notebooks/: AtomJAX_Tutorial.ipynb
tests/: test_hamiltonian.py  test_solvers.py
